[package]
edition = "2021"
name = "ecstasy"
version = "0.3.4"
authors = ["AXAz0r <thealeksaradovic@gmail.com>", "Autist69420 <enp7s1@tutanota.com>", "TinnedTime <timetinned@gmail.com>"]
keywords = ["image", "scrapper", "gallery"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Autist69420/ecstasy"
description = "A fork of the modular, expandable, gallery collector named Kyanite"
exclude = [
    ".obsidian/"
]


[profile.release]
opt-level = 3
lto = true

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = "3.2.25"
fern = { version = "0.6.2", features = ["colored"] }
flate2 = "1.0.30"
md5 = "0.7.0"
log = "0.4.21"
reqwest = "0.9.24"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
serde-xml-rs = "0.6.0"
slug = "0.1.5"
